# droidpilot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  developer_guide.md  dsl_reference.md  plugin_system.md
droidpilot/: __init__.py
droidpilot/actions/: __init__.py  app.py  screenshot.py  swipe.py  tap.py  text.py
droidpilot/adb/: __init__.py  client.py  device.py
droidpilot/cli/: __init__.py  main.py
droidpilot/core/: __init__.py  ast_nodes.py  context.py  engine.py  grammar.lark  parser.py
droidpilot/plugins/: __init__.py  plugin_loader.py
droidpilot/recorder/: __init__.py  event_recorder.py
droidpilot/vision/: __init__.py  matcher.py
examples/: basic_demo.droid  instagram_bot.droid  scroll_bot.droid
scripts/: pre-push.sh
tests/: __init__.py  test_actions.py  test_adb_driver.py  test_ast_nodes.py  test_engine.py  test_parser.py
