[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "droidpilot"
version = "0.1.0"
description = "A scriptable Android automation framework via ADB — no device agent required"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "DroidPilot Contributors" }]
requires-python = ">=3.11"
keywords = ["android", "automation", "adb", "testing", "mobile"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Hardware",
]
dependencies = [
    "click>=8.1",
    "lark>=1.1",
    "pydantic>=2.0",
    "rich>=13.0",
    "opencv-python>=4.8",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-mock>=3.11",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.scripts]
droidpilot = "droidpilot.cli.main:cli"

[project.urls]
Homepage = "https://github.com/droidpilot/droidpilot"
Documentation = "https://droidpilot.readthedocs.io"
Repository = "https://github.com/droidpilot/droidpilot"
"Bug Tracker" = "https://github.com/droidpilot/droidpilot/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["droidpilot*"]

[tool.setuptools.package-data]
droidpilot = ["core/grammar.lark", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["error::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py311"]
